...
  return (
    <View style={{ flex: 1, justifyContent: 'center', alignItems: 'center' }}>
      {loading ? (
        <Spinner data-testid="spinner" testID="HomeScreenLoading" />
      ) : (
        <>
          <Heading my="$5" testID="HomeScreenTitle">
            Your Invoices
          </Heading>
          {invoices.length ? (
            <FlatList
              data={invoices}
              keyExtractor={(item) => (item as Invoice).id}
...
